--- a/css/style.css
+++ b/css/style.css
@@ -160,3 +160,21 @@ a{
   margin:0;
   padding: 0;
 }
+.div1{
+  display: grid;
+   place-items: center;
+  grid-template-rows: auto auto;
+  gap: 4px;
+ 
+
+}
+.griditem2{
+  text-align: center;
+}
+.griditem1{
+position: relative;
+padding-left: 625px;
+padding-bottom: 10px;
+margin: 0;
+place-items: center;
+}
