--- a/css/style.css
+++ b/css/style.css
@@ -1,186 +1,234 @@
-body{
-  margin:0;
+body {
+  margin: 0;
   padding: 0;
-  padding-top: 0;
+  box-sizing: border-box;
+  /* padding-top: 0; */
   width: 100%;
-  font-family: 'Merriweather', serif;
-  color: #40511E;
+  font-family: "Merriweather", serif;
+  color: #40511e;
 }
 
+.width-full {
+  width: auto;
+  padding: 2px;
+}
 
-h1{
-  margin-top:90px;
-  font-family: 'Sacramento', cursive;
+.flex-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-description {
+  width: 23rem;
+}
+
+.description-text {
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 50;
+}
+
+.boy-logo {
+  width: 20rem;
+  margin: 10px auto;
+}
+
+h1 {
+  margin-top: 90px;
+  font-family: "Sacramento", cursive;
   font-size: 5.6em;
   font-weight: 500;
   color: #4ecfcf;
   line-height: 2;
 }
-h2{
-  font-family: 'Montserrat', sans-serif;
+h2 {
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
   font-size: 1.4rem;
-  color: #66BFBF;
+  color: #66bfbf;
   font-weight: normal;
-
 }
 
-h3{
-  font-family: 'Montserrat', sans-serif;
-  color:#11999E;
-
+h3 {
+  font-family: "Montserrat", sans-serif;
+  color: #11999e;
 }
-.headr{
+
+/* HEADER */
+
+.headr {
   text-align: center;
   padding-top: 100px;
-  color: #4D3664;
+  color: #4d3664;
   max-width: 100%;
-  background-color:#e0ebe8;
+  background-color: #e0ebe8;
 }
-.top-cloud{
+.top-cloud {
   position: relative;
   left: 300px;
   max-width: 100%;
   height: auto;
 }
-.btm-cloud{
+.btm-cloud {
   position: relative;
   right: 350px;
   top: 30px;
 }
-.mountain{
+.mountain {
   position: relative;
   top: 6px;
-  width: 600px;
+  /* width: 600px; */
+  width: 50%;
 }
-.logo{
-  position:relative;
+.logo {
+  position: relative;
   left: 639px;
   top: 25px;
 }
-.tag1{
-text-align: center;
-margin-left: 35%;
-margin-right: 35%;
-font-size: 1.5em;
-font-weight: 50;
-}
-.logoexp{
+
+.logoexp {
   text-align: center;
 }
 
-p{
+/* MAIN  */
+
+p {
   color: #545454;
   line-height: 2;
-  
 }
-.tag2{
-    text-align:left;
-    margin-left: 25%;
-    margin-right: 10%;
-    margin-top: 5%;
-    font-size: 1.2em;
-    font-weight: 50;
-    }
-.skills{
-  margin-top: 2%;
+
+.tag2 {
+  text-align: left;
+  font-size: 1.2em;
+  font-weight: 50;
+}
+
+.sub-description {
+  width: 40rem;
+}
+
+.skills {
   display: flex;
-  max-width: 100%;
+  align-items: center;
+  justify-content: center;
 }
-.sk1{
+
+.sk1 {
   text-align: center;
-  font-size:2.4em;
+  font-size: 2.4em;
 }
-.skillogo1{
- position: relative;
- padding-right: 200px;
- width:200px;
+.skillogo1 {
+  width: 200px;
 }
-.develop{
+
+.develop {
   display: flex;
   margin-top: 2%;
 }
-.skillogo2{
-  position: relative;
-  padding-left: 200px;
+.skillogo2 {
+  margin-right: 3rem;
   width: 235px;
 }
-.tag3{
-  margin-top: 2%;
-  margin-left: 25%;
-  margin-right: 15%;
+.tag3 {
   font-weight: 50;
   font-size: 1.2em;
 }
-.foot{
+
+/* FOOTER */
+
+.contact-me {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.foot {
+  margin-top: 1rem;
   text-align: center;
   font-size: 2em;
-  color:#11999E;
+  color: #11999e;
 }
-.lastft{
+
+.lastft {
+  margin: 2.4rem 0;
   font-size: 1em;
   font-weight: 50;
-  text-align:center;
-  width:40% ;
-  margin: 40px auto 60px;
-}
-.botmcont{
-  display: flex;
-  justify-content:space-evenly;
-  text-decoration: none;
-}
-.btn1{
-  text-decoration: none;
-  cursor: pointer;
-}
-.btn2{
-  text-decoration: none;
-  cursor: pointer;
-}
-.btn3{
-  text-decoration: none;
-  cursor: pointer;
-}
-a{
-  color: #11999E;
-}
-.copy{
   text-align: center;
-  position: relative;
-  padding-left: 20px;
+  width: 40%;
+}
+
+.botmcont {
+  display: flex;
+  justify-content: space-evenly;
+  text-decoration: none;
+}
+
+.btn {
+  color: #11999e;
+  text-decoration: none;
+}
+
+.copy {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  /* padding: 50px auto; */
   font-size: 1.3em;
   color: black;
 }
-.lstele{
-  background-color:#B7E5DD;
-  margin:0;
+.lstele {
+  background-color: #b7e5dd;
+  margin: 0;
   padding: 0;
 }
-.div1{
+.div1 {
   display: grid;
-   place-items: center;
+  place-items: center;
   grid-template-rows: auto auto;
   gap: 4px;
- 
+}
 
-}
-.griditem2{
-  text-align: center;
-  font-size: 1.2em;
-  font-weight: 50;
-  width: 30%;
-  margin: auto;
-}
-.griditem1{
-position: relative;
-padding-left: 645px;
-padding-top: 10px;
-}
-.flex{
-  margin: 50px auto 50px auto;
-}
-hr{
-  border: dotted #EAF6F6 5px;
+hr {
+  border: dotted #c9eded 8px;
   border-bottom: none;
   width: 4%;
-  margin: 100px auto;
+  margin: 32px auto;
+}
+
+@media (max-width: 500px) {
+  body {
+    overflow-x: hidden;
+  }
+  .skills {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+  .develop {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .sub-description {
+    width: 90%;
+  }
+
+  .skillogo2 {
+    margin: 0;
+  }
+
+  .lastft {
+    width: 80%;
+  }
+
+  .top-cloud {
+    visibility: hidden;
+  }
 }
