--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 
 .description-text {
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.2em;
   font-weight: 50;
   font-family: "Montserrat", sans-serif;
 }
